<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home_text"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/search_text"/>

    <item
        android:id="@+id/nav_vehicles"
        android:icon="@drawable/ic_baseline_bus"
        android:title="@string/vehicle_text"/>

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/favorite_text"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/settings_text"/>

</menu>